# obs-vctr-srch

./: .env.example  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  docker-compose.dev.override.yml  docker-compose.test.override.yml  docker-compose.yml  entrypoint.sh  justfile  progress_viewer.html  pyproject.toml
.github/workflows/: build-and-push.yml  ci-pipeline.yml  format-and-lint.yml  run-tests.yml
alembic/: env.py
dev/mock-vault/: api-endpoints.md  deployment-guide.md  vector-search-overview.md
dev/mocks/: __init__.py  git_manager.py
obs-vault/: README.md
obs-vault/.obsidian/: workspace.json
obs-vault/android/: android-development-to-user.md  index_android.md
obs-vault/applications-of-llm/: apple-m4-pro-local-llm-strategy.md  github-cli-ai-agent-deep-dive.md  index_applications-of-llm.md  llm-business-report.md  ollama-llm-analysis-report-2025.md
obs-vault/dev-discipline/: code-testing-benefits.md  index_dev-discipline.md
obs-vault/django/: index_django.md
obs-vault/documentation/: index_documentation.md  katex-math-expressions-tutorial.md  vitepress-commands-summary.md
obs-vault/infrastructure/: declarative-rag-system-docker-compose.md  index_infrastructure.md  inference-acceleration-with-gpu.md  introduction-to-docker.md  kubernetes-ci-cd-for-gpu-workloads.md  kubernetes-introduction-guide.md  llm-api-server-containerization.md  local-ai-dev-with-docker.md  network-fundamentals-for-devs.md  production-monitoring-with-prometheus-grafana.md
obs-vault/lang-chain/: index_lang-chain.md
obs-vault/llm-optimization/: claude-md-creation-guide.md  how-serena-works.md  index_llm-optimization.md
obs-vault/obsidian-agents/: 1-new-article-creation.md  2-file-organization-and-markdown-formatting.md  3-existing-article-improvement.md  4-category-structure-organization.md  (+3 more)
src/: dependencies.py  main.py
(+112 files in other folders)
